NATTQA-ENV/force-app/main/default/objects/Lead/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>