NATTQA-ENV/force-app/main/default/objects/Lead/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <inlineHelpText>Does this contact makes decisions for the Products identified in the SPIF and for the products associated with the lead receiving business?</inlineHelpText>
    <label>Contact Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>