NATTQA-ENV/force-app/main/default/objects/Lead/fields/Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Customer_Budget__c</fullName>
    <inlineHelpText>Does the Customer have budget to proceed?</inlineHelpText>
    <label>Customer Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>