NATTQA-ENV/force-app/main/default/objects/Lead/fields/Customer_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Details__c</fullName>
    <inlineHelpText>Is the customer a building owner or design build contractor or other?</inlineHelpText>
    <label>Customer Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building Owner</fullName>
            </value>
            <value>
                <fullName>Design Build Contractor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>