NATTQA-ENV/force-app/main/default/objects/Lead/fields/Customer_Discussion_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discussion_Date__c</fullName>
    <label>Customer Discussion Date</label>
    <type>Date</type>
</CustomField>