NATTQA-ENV/force-app/main/default/objects/Lead/fields/Customer_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest__c</fullName>
    <inlineHelpText>During your initial discussions what products/solutions is the customer interested in as it relates to &apos;Healthy building&apos; and/or what is the challenge or opportunity they are trying to solve?</inlineHelpText>
    <label>Customer Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>