NATTQA-ENV/force-app/main/default/objects/Lead/fields/Errors_on_Sending_Record__c.field-meta.xml
<CustomField>
    <fullName>Errors_on_Sending_Record__c</fullName>
    <label>Errors on Sending Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>