NATTQA-ENV/force-app/main/default/objects/Lead/fields/Estimated_Payout__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payout__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Payout</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>