NATTQA-ENV/force-app/main/default/objects/Lead/fields/Lead_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Name__c</fullName>
    <label>Lead Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>