NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Category__c</fullName>
    <description>NATT</description>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Previously Lost</fullName>
            </value>
            <value>
                <fullName>Break-In</fullName>
                <isActive>false</isActive>
                <label>Break-In</label>
            </value>
            <value>
                <fullName>Old Customer Lost</fullName>
                <isActive>false</isActive>
                <label>Old Customer Lost</label>
            </value>
            <value>
                <fullName>Time in Segment</fullName>
                <isActive>false</isActive>
                <label>Time in Segment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>