NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Dealer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer__c</fullName>
    <formula>CreatedBy.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer</label>
    <type>Text</type>
</CustomField>