NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Division__c.field-meta.xml
<CustomField>
    <fullName>NATT_Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>