NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT - maps to opportunity</description>
    <label>End Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>