NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Fleet_Size_Tractor__c.field-meta.xml
<CustomField>
    <fullName>NATT_Fleet_Size_Tractor__c</fullName>
    <description>NATT</description>
    <label>Fleet Size - Tractor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>