NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_General_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_General_Management_Comments__c</fullName>
    <label>General Management Comments</label>
    <type>TextArea</type>
</CustomField>