NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_How_Long__c.field-meta.xml
<CustomField>
    <fullName>NATT_How_Long__c</fullName>
    <description>NATT</description>
    <label>How Long?</label>
    <length>225</length>
    <type>Text</type>
</CustomField>