NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>NATT_Market_Segment__c</fullName>
    <description>NATT</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>