NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Part_Sales__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Sales</label>
    <type>Checkbox</type>
</CustomField>