NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Part_Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Sales_Comments__c</fullName>
    <label>Part Sales Comments</label>
    <type>TextArea</type>
</CustomField>