NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Potential_of_Units__c.field-meta.xml
<CustomField>
    <fullName>NATT_Potential_of_Units__c</fullName>
    <label>Potential # of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>