NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Potential_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Potential_Opportunity_Amount__c</fullName>
    <description>NATT</description>
    <label>Potential Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>