NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Region__c.field-meta.xml
<CustomField>
    <fullName>NATT_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>