NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Service_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Service_Comments__c</fullName>
    <label>Service Comments</label>
    <type>TextArea</type>
</CustomField>