NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Trade_Cycle_in_Years__c.field-meta.xml
<CustomField>
    <fullName>NATT_Trade_Cycle_in_Years__c</fullName>
    <description>NATT</description>
    <label>Trade Cycle in Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>