NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Unit_Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit_Sales_Comments__c</fullName>
    <label>Unit Sales Comments</label>
    <type>TextArea</type>
</CustomField>