NATTQA-ENV/force-app/main/default/objects/Lead/fields/NATT_Warranty__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty</label>
    <type>Checkbox</type>
</CustomField>