NATTQA-ENV/force-app/main/default/objects/Lead/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <label>Opportunity Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>