NATTQA-ENV/force-app/main/default/objects/Lead/fields/Opportunity_Pipeline_Value_Est__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Pipeline_Value_Est__c</fullName>
    <label>Opportunity Pipeline Value(Est.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>