NATTQA-ENV/force-app/main/default/objects/Lead/fields/Opportunity_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reference_Id__c</fullName>
    <label>Opportunity Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>