NATTQA-ENV/force-app/main/default/objects/Lead/fields/Opportunity_Value_Won_Act__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value_Won_Act__c</fullName>
    <label>Opportunity Value Won(Act.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>