NATTQA-ENV/force-app/main/default/objects/Lead/fields/Other_Products_Interested__c.field-meta.xml
<CustomField>
    <fullName>Other_Products_Interested__c</fullName>
    <label>Other Products Interested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>