NATTQA-ENV/force-app/main/default/objects/Lead/fields/Other_Visit_Purpous__c.field-meta.xml
<CustomField>
    <fullName>Other_Visit_Purpous__c</fullName>
    <label>Other Visit Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>