NATTQA-ENV/force-app/main/default/objects/Lead/fields/Products_Interested__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested__c</fullName>
    <label>Products Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LYNX Fleet (Reefer Telematics)</fullName>
            </value>
            <value>
                <fullName>LYNX API</fullName>
            </value>
            <value>
                <fullName>Vessel Control Tower (VCT)</fullName>
            </value>
            <value>
                <fullName>IoTPASS (Dry Box Telematics)</fullName>
            </value>
            <value>
                <fullName>BluEdge Partner channel program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>