NATTQA-ENV/force-app/main/default/objects/Lead/fields/Receiving_Business__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Business__c</fullName>
    <label>Receiving Business</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sending_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSP Global Access - LENEL S2</fullName>
            </value>
            <value>
                <fullName>FSP Global Access - ONITY</fullName>
            </value>
            <value>
                <fullName>NORESCO</fullName>
            </value>
            <value>
                <fullName>Commercial HVAC Equipment</fullName>
            </value>
            <value>
                <fullName>Commercial HVAC Service</fullName>
            </value>
            <value>
                <fullName>HVAC Controls</fullName>
            </value>
            <value>
                <fullName>BSG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>