NATTQA-ENV/force-app/main/default/objects/Lead/fields/Record_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Reference_Id__c</fullName>
    <label>Record Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>