NATTQA-ENV/force-app/main/default/objects/Lead/fields/Sender_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sender_Phone__c</fullName>
    <label>Sender Phone</label>
    <type>Phone</type>
</CustomField>