NATTQA-ENV/force-app/main/default/objects/Lead/fields/Sending_Business__c.field-meta.xml
<CustomField>
    <fullName>Sending_Business__c</fullName>
    <label>Sending Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSP Global Access - LENEL S2</fullName>
            </value>
            <value>
                <fullName>FSP Global Access - ONITY</fullName>
            </value>
            <value>
                <fullName>NORESCO</fullName>
            </value>
            <value>
                <fullName>Commercial HVAC Equipment</fullName>
                <isActive>false</isActive>
                <label>Commercial HVAC Equipment</label>
            </value>
            <value>
                <fullName>Commercial HVAC Service</fullName>
                <isActive>false</isActive>
                <label>Commercial HVAC Service</label>
            </value>
            <value>
                <fullName>HVAC Controls</fullName>
                <isActive>false</isActive>
                <label>HVAC Controls</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>