NATTQA-ENV/force-app/main/default/objects/Lead/fields/Solutions_Interested__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Interested__c</fullName>
    <label>Solutions Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Receiving_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filtration Technology(Hepa Filters/UV lights/Aglon)</fullName>
            </value>
            <value>
                <fullName>OptiClean(TM) Negative Air Machine</fullName>
            </value>
            <value>
                <fullName>ActivAir(TM)</fullName>
            </value>
            <value>
                <fullName>Environmental Index</fullName>
            </value>
            <value>
                <fullName>DirectKey(TM) mobile access solution</fullName>
            </value>
            <value>
                <fullName>BlueDiamond(TM) touchless access</fullName>
            </value>
            <value>
                <fullName>MyWay(TM)</fullName>
            </value>
            <value>
                <fullName>Safe Start Service</fullName>
            </value>
            <value>
                <fullName>Indoor Air Quality Assessment</fullName>
            </value>
            <value>
                <fullName>Remote Airside Management</fullName>
            </value>
            <value>
                <fullName>Wellness Services</fullName>
            </value>
            <value>
                <fullName>Remote Energy Management</fullName>
            </value>
            <value>
                <fullName>Emergency Assets</fullName>
            </value>
            <value>
                <fullName>Advanced Access Services</fullName>
            </value>
            <value>
                <fullName>Security Assessment &amp; Upgrade Services</fullName>
            </value>
            <value>
                <fullName>ActivAir HHT air terminal</fullName>
            </value>
            <value>
                <fullName>Advanced airside system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>