NATTQA-ENV/force-app/main/default/objects/Lead/recordTypes/Containers.recordType-meta.xml
<RecordType>
    <fullName>Containers</fullName>
    <active>true</active>
    <businessProcess>Container Web to Lead Process</businessProcess>
    <description>Container Web to Lead</description>
    <label>Containers</label>
</RecordType>