NATTQA-ENV/force-app/main/default/objects/Lead/recordTypes/HBI_Leads.recordType-meta.xml
<RecordType>
    <fullName>HBI_Leads</fullName>
    <active>true</active>
    <businessProcess>HBI SPIFF</businessProcess>
    <label>HBI Leads</label>
</RecordType>