NATTQA-ENV/force-app/main/default/objects/Lead/recordTypes/NATT_Lead.recordType-meta.xml
<RecordType>
    <fullName>NATT_Lead</fullName>
    <active>true</active>
    <businessProcess>NATT Lead Process</businessProcess>
    <label>NATT Lead</label>
</RecordType>