NATTQA-ENV/force-app/main/default/objects/Lead/listViews/Container_Web_To_Lead.listView-meta.xml
<ListView>
    <fullName>Container_Web_To_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Container Web To Lead</value>
    </filters>
    <label>Container Web To Lead</label>
    <sharedTo>
        <group>Container_Web_To_Lead</group>
    </sharedTo>
</ListView>